--- a/src/common/less/discovery.less
+++ b/src/common/less/discovery.less
@@ -305,12 +305,10 @@
 		.wealth_train {
 			height: 220px;
 			width: 100%;
-			background-color: #ee1573;
 
 			.title_box {
 				height: 30px;
 				width: 345px;
-				background-color: #29ffdf;
 				margin: 0 auto;
 				display: flex;
 				justify-content: space-between;
@@ -329,75 +327,93 @@
 			.wealth_swiper {
 				height: auto;
 				width: 100%;
+				// margin: 0 auto;
 
 				.my-swipe {
+					
 					.van-swipe-item {
 						color: #fff;
 						font-size: 20px;
-						background-color: #39a9ed;
 						margin-left: 15px;
 						border-radius: 10px;
 
 						.item_cont {
-							height: 150px;
+							height: 165px;
 							width: 100%;
-							background-color: #ECF5FC;
+							background-color: #ecf5fc;
 							border-radius: 10px;
-							
-							.title_box{
+
+							.title_box {
 								height: 40px;
 								width: 260px;
-								background-color: #25ffac;
 								display: flex;
 								justify-content: space-between;
 								align-items: center;
-								
-								.text_icon{
+
+								.text_icon {
 									height: auto;
 									width: auto;
 									display: flex;
 									align-items: center;
-									
-									img{
+
+									img {
 										height: 15px;
 										width: 15px;
 										margin-right: 5px;
 									}
-									
-									span{
+
+									span {
 										font-size: 14px;
 									}
 								}
 							}
-							
-							.cont_box{
-								height: 95px;
+
+							.cont_box {
+								height: 115px;
 								width: 260px;
-								background-color: #ff49d5;
 								margin: 0 auto;
 								display: flex;
 								justify-content: space-between;
 								align-items: flex-start;
-								
-								.cont_left{
-									height: 95px;
+
+								.cont_left {
+									height: 100%;
 									width: 155px;
-									background-color: #6fffc8;
 									display: flex;
 									flex-direction: column;
-									
-									span:nth-child(1){
+									justify-content: space-between;
+
+									span:nth-child(1) {
 										font-size: 17px;
 										color: #000;
 										text-align: left;
 										line-height: 25px;
 										font-weight: 400;
 									}
-									
-									span:nth-child(2){
+
+									span:nth-child(2) {
 										font-size: 10px;
-										color: #8F9297;
+										color: #8f9297;
 										text-align: left;
+										margin-bottom: 10px;
+									}
+									
+									.btn{
+										height: 25px;
+										width: 120px;
+										background-color: #1676FE;
+										color: #FFF;
+										font-size: 10px;
+										border-radius: 20px;
+										line-height: 25px;
+										text-align: center;
+									}
+								}
+								
+								.cont_right{
+									img{
+										height: 68px;
+										width: 68px;
 									}
 								}
 							}
