--- a/src/common/less/opt_stock.less
+++ b/src/common/less/opt_stock.less
@@ -6,6 +6,7 @@
 	.opt_stock_body {
 		position: relative;
 
+		// 头部轮播资讯
 		.top_swiper {
 			height: 40px;
 			width: 100%;
@@ -30,14 +31,14 @@
 				.my-swipe {
 					height: 100%;
 					width: 100%;
-					
+
 					.item_cont {
 						height: 40px;
 						width: 100%;
 						line-height: 40px;
 						font-size: 13px;
 						font-weight: 500;
-						color: #7F7F7F;
+						color: #7f7f7f;
 
 						span {
 							display: block;
@@ -50,13 +51,76 @@
 				}
 			}
 		}
-
+		
+		// 添加按钮
+		.add_btn{
+			height: 45px;
+			width: 100%;
+			font-size: 15px;
+			line-height: 50px;
+			background-color: #FFF;
+			border-top: 1px solid #EEE;
+			font-weight: 500;
+		}
+		
+		// 提醒
+		.remind{
+			height: auto;
+			width: auto;
+			font-size: 10px;
+			color: #BABABC;
+			margin-top: 15px;
+		}
+		
+		// 底部轮播
 		.bottom_swiper {
 			height: 40px;
 			width: 100%;
-			background-color: #ffd810;
+			background-color: #fff;
 			position: fixed;
 			bottom: 50px;
+
+			.my-swipe {
+				height: 100%;
+				width: 100%;
+
+				.item_cont {
+					height: 40px;
+					width: 100%;
+					border-bottom: 1px solid #eee;
+
+					.cont_box {
+						height: 100%;
+						width: 350px;
+						line-height: 50px;
+						font-size: 13px;
+						font-weight: 500;
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						margin: 0 auto;
+
+						.right_text {
+							height: 100%;
+							width: auto;
+							display: flex;
+							align-items: center;
+
+							span {
+								color: #0aa094;
+							}
+
+							span:nth-child(1) {
+								margin-right: 10px;
+							}
+
+							span:nth-child(2) {
+								margin-right: 10px;
+							}
+						}
+					}
+				}
+			}
 		}
 	}
 }
