--- a/src/common/less/community.less
+++ b/src/common/less/community.less
@@ -445,6 +445,28 @@
 			}
 
 			// 关注
+			.attention_box{
+				height: 425px;
+				width: 100%;
+				background-color: #FAFAFA;
+				
+				.cont-box{
+					height: 150px;
+					width: 150px;
+					display: flex;
+					flex-direction: column;
+					align-items: center;
+					justify-content: space-around;
+					font-size: 10px;
+					color: #B4B4B4;
+					margin: 0 auto;
+					
+					img{
+						height: 70px;
+						width: 70px;
+					}
+				}
+			}
 		}
 	}
 }
