--- a/src/common/discovery/discovery.less
+++ b/src/common/discovery/discovery.less
@@ -1,5 +1,5 @@
 .discovery {
-	height: 100%;
+	height: auto;
 	width: 100%;
 	background-color: #fdfefe;
 
@@ -17,7 +17,7 @@
 			position: absolute;
 			top: 0;
 			z-index: 0;
-			background-color: #2591fd;
+			background-image: linear-gradient(-40deg, #5c5ded, #0bddfc);
 		}
 
 		.top_box {
@@ -31,15 +31,14 @@
 			.search_box {
 				height: 100px;
 				width: 100%;
-				// background-color: #28ee28;
 			}
 
 			.top_grid {
-				height: 145px;
+				height: 150px;
 				width: 100%;
 				background-color: #ffffff;
 				border-radius: 5px;
-				box-shadow: 0px 0px 10px #d9dadd;
+				box-shadow: 0px 0px 10px #dadbdc;
 				overflow: hidden;
 				margin-bottom: 15px;
 				padding-top: 10px;
@@ -67,7 +66,7 @@
 				width: 100%;
 				border-radius: 5px;
 				background-color: #ffffff;
-				box-shadow: 0px 0px 10px #d9dadd;
+				box-shadow: 0px 0px 10px #dadbdc;
 				display: flex;
 				flex-direction: column;
 				overflow: hidden;
@@ -303,8 +302,9 @@
 		}
 
 		.wealth_train {
-			height: 220px;
+			height: 230px;
 			width: 100%;
+			background-color: #fff;
 
 			.title_box {
 				height: 30px;
@@ -330,7 +330,6 @@
 				// margin: 0 auto;
 
 				.my-swipe {
-					
 					.van-swipe-item {
 						color: #fff;
 						font-size: 20px;
@@ -397,21 +396,21 @@
 										text-align: left;
 										margin-bottom: 10px;
 									}
-									
-									.btn{
+
+									.btn {
 										height: 25px;
 										width: 120px;
-										background-color: #1676FE;
-										color: #FFF;
+										background-color: #1676fe;
+										color: #fff;
 										font-size: 10px;
 										border-radius: 20px;
 										line-height: 25px;
 										text-align: center;
 									}
 								}
-								
-								.cont_right{
-									img{
+
+								.cont_right {
+									img {
 										height: 68px;
 										width: 68px;
 									}
@@ -424,7 +423,7 @@
 		}
 
 		.tab_two {
-			height: 800px;
+			height: auto;
 			width: 100%;
 			background-color: #eee;
 		}
